--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,88 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <title>Ro Transit</title>
-  <link rel="stylesheet" type="text/css" href="https://fk.github.io/select2-bootstrap-css/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/select2.css">
-  <link rel="stylesheet" type="text/css" href="https://fk.github.io/select2-bootstrap-css/css/select2-bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="https://fk.github.io/select2-bootstrap-css/css/gh-pages.css">
-  <link rel="stylesheet" type="text/css" href="font-awesome\css\font-awesome.min.css">
 
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2.css">
+  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2-bootstrap.css">
+  
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 
  
 </head>
-  <body>
-  <div class="top-search">
-    <div class="left">
-      <div class="form-group">
-      <select id="select-search-from" class="form-control select2 select-from">
-        <option></option>
-        <optgroup label="">
-          <option value=1>BUCUR OBOR</option>
-          <option value=2>HALELE OBOR</option>
-          <option value=3>PIATA OBOR</option>
-          <option value=4>SOSEAUA PANTELIMON</option>
-          <option value=5>BAICULUI</option>
-          <option value=6>SOSEAUA IANCULUI</option>
-          <option value=7>BD.CHISINAU</option>
-          <option value=8>PICTOR HARLESCU</option>
-          <option value=9>BD. NICOLAE GRIGORESCU</option>
-          <option value=10>PARCUL TITAN</option>
-          <option value=11>LIVIU REBREANU</option>
-          <option value=12>POLICLINICA TITAN</option>
-          <option value=13>POSTAVARULUI</option>
-          <option value=14>SOLD. MIHALE STELIAN</option>
-          <option value=15>CODRII NEAMTULUI</option>
-          <option value=16>BD. 1 DECEMBRIE</option>
-          <option value=17>COMPLEX COMERCIAL TITAN</option>
-          <option value=18>FAUR</option>
-        </optgroup>
-      </select>
-      </div>
-    </div>
-    <div class="right">
-      <div class="form-group">
-      <select id="select-search-to" class="form-control select2 select-to">
-        <option></option>
-        <optgroup label="">
-          <option value=1>BUCUR OBOR</option>
-          <option value=2>HALELE OBOR</option>
-          <option value=3>PIATA OBOR</option>
-          <option value=4>SOSEAUA PANTELIMON</option>
-          <option value=5>BAICULUI</option>
-          <option value=6>SOSEAUA IANCULUI</option>
-          <option value=7>BD.CHISINAU</option>
-          <option value=8>PICTOR HARLESCU</option>
-          <option value=9>BD. NICOLAE GRIGORESCU</option>
-          <option value=10>PARCUL TITAN</option>
-          <option value=11>LIVIU REBREANU</option>
-          <option value=12>POLICLINICA TITAN</option>
-          <option value=13>POSTAVARULUI</option>
-          <option value=14>SOLD. MIHALE STELIAN</option>
-          <option value=15>CODRII NEAMTULUI</option>
-          <option value=16>BD. 1 DECEMBRIE</option>
-          <option value=17>COMPLEX COMERCIAL TITAN</option>
-          <option value=18>FAUR</option>
-        </optgroup>
-       
-      </select>
-      </div>
-    </div>
-    <div class="search-btn text-center">
-    <span style="width: 14%; display: block; clear: both;margin-left: 43%">
-      <button type="button" class="btn btn-primary btn-lg btn-block" id="searchBtn">
-       Caută <i class="fa fa-search " style="margin-left: 20px;"></i></button>
+	<body>
+	<div class="container-fluid">
+		<div class="top-search row">
+			<div class="row" >
+			    <div class="col-md-5 search-field-wrap"  >
+			      <select id="select-search-from" class="form-control select2 select-from">
+			        <option></option>
+			        <optgroup label="" id="option-group-from">
 
-      </span>
-    </div>
-  </div>
-  <div class="footer">&copy 2016 Gov IT Hub</div>
+			        </optgroup>
+			      </select>
+			    </div>
+			    <div class="col-md-5 col-md-offset-2 search-field-wrap">
+			      <select id="select-search-to" class="form-control select2 select-to">
+			        <option></option>
+			        <optgroup label="" id="option-group-to">
 
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script type="text/javascript" src="https://select2.github.io/select2/select2-3.5.2/select2.js"></script>
-      <script type="text/javascript" src="https://fk.github.io/select2-bootstrap-css/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="main.js"></script>
-  </body>
+			        </optgroup>		       
+			      </select>
+			    </div>
+		    </div>
+		    <div class="row search-btn-wrap">
+			    <div class="col-md-4 col-md-offset-4 text-center">
+					<button type="button" class="btn btn-primary btn-lg btn-block" id="searchBtn">Caută 
+					  	<i class="fa fa-search " style="margin-left: 20px;"></i>
+					</button>			      				    
+			    </div>
+		    </div>
+	  	</div>
+  		<div class="footer">&copy 2016 Gov IT Hub</div>
+  	</div>
+	    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>      
+	    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	    <script type="text/javascript" src="lib/select2/js/select2.js"></script>
+	    <script type="text/javascript" src="js/jsdata/stations.js"></script>
+	    <script type="text/javascript" src="js/index.js"></script>
+	</body>
 </html>
