--- a/webapp/results.html
+++ b/webapp/results.html
@@ -2,30 +2,41 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
  	<title>Ro Transit</title>
  	
- 	<link rel="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" href="results.css">
- 	<link rel="stylesheet" type="text/css" href="results.css">
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+ 	<link rel="stylesheet" type="text/css" href="css/results.css">
 </head>
 <body>	
-	<div class= "leftImages">
-		<img src="img/b1.jpg"/>
-	</div>
+	<div class="container-fluid">
+		<div class= "row" style="margin-top: 30px;">
+			<div class="col-md-5 col-md-offset-1 hidden-xs hidden-sm">
+				<div class="">
+					<img src="img/bus.jpg" width="500" height="272" />
+				</div>
+				<div class="routeInfo"></div>
+			</div>
+			
 
-		<div class="routeInfo"></div>
+			<div class = "route col-md-5 col-md-offset-1 col-sm-8  col-sm-offset-2 col-xs-10 col-xs-offset-2" >
+				<div class="routeInfo hidden-lg hidden-md" style="margin-bottom: 30px;"></div>
+				<ul class="experiences" >
+
+				  <!-- Experience -->
+
+				</ul>
+			</div>
+		</div>	
 	
-	<div class = "route">
-		<ul class="experiences">
-
-		  <!-- Experience -->
-
-		</ul>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>      
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
-	<script type="text/javascript" src="jsdata/durations.js"></script>
-	<script type="text/javascript" src="jsdata/stations.js"></script>
-	<script type="text/javascript" src="results.js"></script>
+	<script type="text/javascript" src="js/jsdata/durations.js"></script>
+	<script type="text/javascript" src="js/jsdata/stations.js"></script>
+	<script type="text/javascript" src="js/results.js"></script>
 </body>
 </html>
