adaugare timp total

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -47,6 +47,7 @@
 		    </div>
 	  	</div>
 	  	<div class="results col-lg-9">
+	  		<div class="total text-left">Total calatorie: <span>0</span> minute</div>
 	  		<ul class="experiences">
 		  	</div>
 
