--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <title>Ro Transit</title>
+	<head>
+	  <meta charset="UTF-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  
+	  <title>Ro Transit</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2.css">
-  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2-bootstrap.css">
-  
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2.css">
+	  <link rel="stylesheet" type="text/css" href="lib/select2/css/select2-bootstrap.css">
+	  
+	  <link rel="stylesheet" type="text/css" href="css/index.css">
 
- 
-</head>
+	 
+	</head>
 	<body>
 	<div class="container-fluid">
 		<div class="row">
-		<div class="top-search col-lg-3">
-			<div class="row" >
-			    <div class="col-lg-12 search-field-wrap"  >
-			      <select id="select-search-from" class="form-control select2 select-from">
-			        <option></option>
-			        <optgroup label="" id="option-group-from">
+			<div class="top-search col-lg-3">
+				<div class="row" >
+				    <div class="col-lg-12 search-field-wrap"  >
+				      <select id="select-search-from" class="form-control select2 select-from">
+				        <option></option>
+				        <optgroup label="" id="option-group-from">
 
-			        </optgroup>
-			      </select>
-			    </div>
-			    <div class="col-lg-12 search-field-wrap">
-			      <select id="select-search-to" class="form-control select2 select-to">
-			        <option></option>
-			        <optgroup label="" id="option-group-to">
+				        </optgroup>
+				      </select>
+				    </div>
+				    <div class="col-lg-12 search-field-wrap">
+				      <select id="select-search-to" class="form-control select2 select-to">
+				        <option></option>
+				        <optgroup label="" id="option-group-to">
 
-			        </optgroup>		       
-			      </select>
+				        </optgroup>		       
+				      </select>
+				    </div>
 			    </div>
-		    </div>
-		    <div class="row search-btn-wrap">
-			    <div class="col-lg-12">
-					<button type="button" class="btn btn-primary btn-lg btn-block" id="searchBtn">Caută 
-					  	<i class="fa fa-search " style="margin-left: 20px;"></i>
-					</button>			      				    
+			    <div class="row search-btn-wrap">
+				    <div class="col-lg-12">
+						<button type="button" class="btn btn-primary btn-lg btn-block" id="searchBtn">Caută 
+						  	<i class="fa fa-search " style="margin-left: 20px;"></i>
+						</button>			      				    
+				    </div>
 			    </div>
-		    </div>
-	  	</div>
-	  	<div class="results col-lg-9">
-	  		<div class="total text-left">Total calatorie: <span>0</span> minute</div>
-	  		<ul class="experiences">
 		  	</div>
+		  	<div class="results col-lg-9">
+		  		<div class="total text-left">Total călătorie: <span>0</span> minute</div>
+		  		<ul class="experiences">
+			  	</ul>
 
+		  	</div>
+	  		<div class="col-lg-12 footer">&copy 2016 Gov IT Hub</div>
 	  	</div>
-  		<div class="col-lg-12 footer">&copy 2016 Gov IT Hub</div>
-  	</div>
 	    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>      
 	    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	    <script type="text/javascript" src="lib/select2/js/select2.js"></script>
